# pygravmag3d

./: .gitignore  README.md  example_01.ipynb  mkdocs.yml  pyproject.toml  setup.py
docs/: 404.html  index.html
docs/reference/: index.html
docs/search/: search_index.json
docs_src/: index.md  reference.md
pygravmag3d/: get_h.py  get_pqr.py
pygravmag3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
site/: index.html  objects.inv
site/reference/: index.html
site/search/: search_index.json
